--- a/frontend/src/css/Addpro.scss
+++ b/frontend/src/css/Addpro.scss
@@ -64,7 +64,7 @@
   
       button {
         padding: 12px 20px;
-        background-color: #007bff;
+        background-color: #10b146;
         color: #fff;
         border: none;
         margin: auto;
@@ -74,7 +74,7 @@
         transition: background-color 0.3s ease;
   
         &:hover {
-          background-color: #0056b3;
+          background-color: #0d8a45;
         }
       }
     }
